# kestra-snowflake-data-pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  context.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  specs.md
dashboard/: README.md  requirements.txt  streamlit_app.py
dashboard/powerbi/: README.md  olist_powerbi_dataset.sql
dbt/models/: powerbi_dataset.sql  schema.yml
dbt_duckdb/: README.md  dbt_project.yml  profiles.yml
dbt_duckdb/models/: schema.yml
dbt_duckdb/models/marts/: powerbi_dataset.sql
dbt_duckdb/models/staging/: stg_olist_customers.sql  stg_olist_order_items.sql  stg_olist_order_payments.sql  stg_olist_orders.sql
flows/: olist_download.yml  olist_download_flow.yml  olist_lake.yml  olist_pipeline.yml  snowflake_loader.yml  snowflake_transform.yml
